я не слепой блять

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>BOOM</h1>
-	<em>sasha gey master</em>
+	<em>grisha mega gay</em>
 	<!--Жесткий человек паук летит-->
 </body>
 </html>
