--- a/html/index.html
+++ b/html/index.html
@@ -7,9 +7,15 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>BOOM</h1>
-	<em>grisha mega gay</em>
-	<!--Жесткий человек паук летит-->
+	<header>
+
+	</header>
+	<main>
+
+	</main>
+	<footer>
+		
+	</footer>
 </body>
 </html>
 <!--BOOM-->
