--- a/html/index.html
+++ b/html/index.html
@@ -5,17 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link href="../css/main.css" rel="stylesheet">
 </head>
-<body>
+<body> 
 	<header>
-
+		<h1>ABOBA</h1>
+		<input placeholder="search this fucking shit">
+		<button><a href="https://www.youtube.com/watch?v=Rv4YGMeQB8o">top 5 deaths in anime</a></button>
 	</header>
-	<main>
-
-	</main>
-	<footer>
-		
-	</footer>
 </body>
 </html>
-<!--BOOM-->
