--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../css/main.css">
 	<title>Document</title>
 </head>
 <body>
@@ -11,7 +12,23 @@
 
 	</header>
 	<main>
-
+		<div class = "SanBoy1">
+			<img class = "SanBoy1_image" src="..\img\санбой.jpg"alt = "А вот хуй вам а не санбой">
+			<p class = "SanBoy_text1">Санбой рассказывает про его любимый сериал<br>
+			 и не знает что саша проиграет тим лиду.</p>
+			<a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p style="text-align: center"></p><button>Читать длаее..</button></a>
+		</div>
+		<div class="SanBoy2">
+			<img class="SanBoy2_image" src="..\img\санбой__2.jpg" alt="А вот хуй вам а не санбой">
+			<p class = "SanBoy_text2">Это пророк санбой смотрит как Саша<br>
+			 проигрывает футер тим лиду.</p>
+			 <a href = "https://www.youtube.com/watch?v=3HrSVXP99kQ"><p style="text-align: center"></p><button>ABOBA</button></a>
+		</div>
+		<div class = "SanBoy3">
+			<img class="SanBoy3_image" src="..\img\Пророк__санбой__3.jpg" alt="А вот хуй вам а не санбой">
+			<p class = "SanBoy_text3">Это пророк санбой отмечает<br>
+			 порожение Саши.</p>
+		</div>
 	</main>
 	<footer>
 		
