--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
 			<img class="SanBoy2_image" src="..\img\санбой__2.jpg" alt="А вот хуй вам а не санбой">
 			<p class = "SanBoy_text2">Это пророк санбой смотрит как Саша<br>
 			 проигрывает футер тим лиду.</p>
-			 <a href = "https://www.youtube.com/watch?v=3HrSVXP99kQ"><p style="text-align: center"></p><button>ABOBA</button></a>
+			 <a href = "https://www.youtube.com/watch?v=3HrSVXP99kQ"><p style="text-align: center"></p><button class = "SanBoy1_button">ABOBA</button></a>
 		</div>
 		<div class = "SanBoy3">
 			<img class="SanBoy3_image" src="..\img\Пророк__санбой__3.jpg" alt="А вот хуй вам а не санбой">
