Жестко тегнул футер

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,33 +9,44 @@
 	<link href="../css/main.css" rel="stylesheet">
 </head>
 <body> 
+	<!--Гриша жестко тегнул хедер-->
 	<header>
 		<h1>ABOBA</h1>
 		<input placeholder="search this fucking shit">
-		<button><a href="https://www.youtube.com/watch?v=Rv4YGMeQB8o">top 5 deaths in anime</a></button>
+		<button class="grisha__knopka"><a href="https://www.youtube.com/watch?v=Rv4YGMeQB8o">top 5 deaths in anime</a></button>
 	</header>
-
+	<!--Саня жестко тегнул маин-->
 	<main>
 		<div class = "SanBoy1">
 			<img class = "SanBoy1_image" src="..\img\санбой.jpg"alt = "А вот хуй вам а не санбой">
 			<p class = "SanBoy_text1">Санбой рассказывает про его любимый сериал<br>
-			 и не знает что саша проиграет тим лиду.</p>
+			и не знает что саша проиграет тим лиду.</p>
 			<a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p style="text-align: center"></p><button class = "SanBoy1_button">Читать длаее..</button></a>
 		</div>
 		<div class="SanBoy2">
 			<img class="SanBoy2_image" src="..\img\санбой__2.jpg" alt="А вот хуй вам а не санбой">
 			<p class = "SanBoy_text2">Это пророк санбой смотрит как Саша<br>
-			 проигрывает футер тим лиду.</p>
-			 <a href = "https://www.youtube.com/watch?v=3HrSVXP99kQ"><p style="text-align: center"></p><button class = "SanBoy1_button">ABOBA</button></a>
+			проигрывает футер тим лиду.</p>
+			<a href = "https://www.youtube.com/watch?v=3HrSVXP99kQ"><p style="text-align: center"></p><button class = "SanBoy1_button">ABOBA</button></a>
 		</div>
 		<div class = "SanBoy3">
 			<img class="SanBoy3_image" src="..\img\Пророк__санбой__3.jpg" alt="А вот хуй вам а не санбой">
 			<p class = "SanBoy_text3">Это пророк санбой отмечает<br>
-			 порожение Саши.</p>
+			порожение Саши.</p>
 		</div>
 	</main>
+	<!--Жестко тегнул футтер-->
 	<footer>
 		
+		<div class="foot">
+			<div class="container__footer">
+				<button class="knopka__footer"><a href="#">ABOBA</a></button>
+				<button class="knopka__footer"><a href="#">ABOBA</a></button>
+				<button class="knopka__footer"><a href="#">ABOBA</a></button>
+				<button class="knopka__footer"><a href="#">ABOBA</a></button>
+			</div>
+		</div>
+
 	</footer>
 </body>
 </html>
