пацаны, обнова в бравл старсе

--- a/html/index.html
+++ b/html/index.html
@@ -14,11 +14,13 @@
 		<h1>ABOBA</h1>
 		<input placeholder="search this fucking shit">
 		<button class="grisha__knopka"><a href="https://www.youtube.com/watch?v=Rv4YGMeQB8o">top 5 deaths in anime</a></button>
+		<img class="abobusimg" src="..\img\EmuFdbZWEAAczdl-removebg-preview.png" alt="l">
+		<button class="lox"><a href="..\img\PicsArt_12-04-06.52.09.jpg">tap to this button</a></button>
 	</header>
 	<!--Саня жестко тегнул маин-->
 	<main>
 		<div class = "SanBoy1">
-			<img class = "SanBoy1_image" src="..\img\санбой.jpg"alt = "А вот хуй вам а не санбой">
+			<img class = "SanBoy1_image" src="..\img\санбой.jpg" alt = "А вот хуй вам а не санбой">
 			<p class = "SanBoy_text1">Санбой рассказывает про его любимый сериал<br>
 			и не знает что саша проиграет тим лиду.</p>
 			<a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"><p style="text-align: center"></p><button class = "SanBoy1_button">Читать длаее..</button></a>
