Мега обновление в бравл старс

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 		<img class="abobusimg" src="..\img\EmuFdbZWEAAczdl-removebg-preview.png" alt="l">
 		<button class="lox"><a href="..\img\PicsArt_12-04-06.52.09.jpg">tap to this button</a></button>
 		<!--Саня жестко тегнул в проекте Гриши-->
-		<button class="lox_recurtion"><a href="..\img\2021-11-13 20-10-14.JPG">and to this button></a></button>
+		<button class="lox_recurtion"><a href="..\img\2021-11-13 20-10-14.JPG">and to this button</a></button>
 	</header>
 	<!--Саня жестко тегнул маин-->
 	<main>
